# quicktranslate

./: README.md  install.sh  pyproject.toml  requirements.txt  translate.py
src/quicktranslate/: __main__.py  cli.py  translate.py
